Fix layout issues and update header font

--- a/webviews/common/common.css
+++ b/webviews/common/common.css
@@ -192,6 +192,7 @@ body img.avatar {
 
 .automerge-section {
 	display: flex;
+	align-items: center;
 	padding: 16px;
 	background: var(--vscode-editorHoverWidget-background);
 	border-bottom-left-radius: 3px;
